fix(components/tabs): fix tab-item transition issue; add gap for tabs

--- a/packages/theme/src/scss/components/tab-item/basic.scss
+++ b/packages/theme/src/scss/components/tab-item/basic.scss
@@ -4,10 +4,10 @@
 @use '../../mixins/config' as *;
 
 :host {
-  display: block;
-  overflow: auto;
+  display: contents;
 }
 
 @include b(tab-item) {
-  
+  overflow: auto;
+  grid-area: 1/1;
 }
